// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`empty prefix 1`] = `
"/* layer: default */
.scale-100{--scale-x:1;--scale-y:1;transform:translateX(var(--translate-x)) translateY(var(--translate-y)) translateZ(var(--translate-z)) rotate(var(--rotate)) rotateX(var(--rotate-x)) rotateY(var(--rotate-y)) rotateZ(var(--rotate-z)) skewX(var(--skew-x)) skewY(var(--skew-y)) scaleX(var(--scale-x)) scaleY(var(--scale-y)) scaleZ(var(--scale-z));}
.text-red{--text-opacity:1;color:rgba(248,113,113,var(--text-opacity));}
.text-opacity-50{--text-opacity:0.5;}"
`;

exports[`preset-wind > centered containers 1`] = `
"/* layer: shortcuts */
.container{width:100%;margin-left:auto;margin-right:auto;}
@media (min-width: 640px){
.container{max-width:640px;margin-left:auto;margin-right:auto;}
}
@media (min-width: 768px){
.container,
.md\\\\:container{max-width:768px;margin-left:auto;margin-right:auto;}
}
@media (min-width: 1024px){
.container,
.lg\\\\:container,
.md\\\\:container{max-width:1024px;margin-left:auto;margin-right:auto;}
}
@media (min-width: 1280px){
.container,
.lg\\\\:container,
.md\\\\:container{max-width:1280px;margin-left:auto;margin-right:auto;}
}
@media (min-width: 1536px){
.container,
.lg\\\\:container,
.md\\\\:container{max-width:1536px;margin-left:auto;margin-right:auto;}
}"
`;

exports[`preset-wind > containers 1`] = `
"/* layer: shortcuts */
.container{width:100%;margin-left:auto;margin-right:auto;padding-left:1rem;padding-right:1rem;}
@media (min-width: 640px){
.container{max-width:640px;margin-left:auto;margin-right:auto;padding-left:2rem;padding-right:2rem;}
}
@media (min-width: 768px){
.container,
.md\\\\:container{max-width:768px;margin-left:auto;margin-right:auto;padding-left:1rem;padding-right:1rem;}
}
@media (min-width: 1024px){
.container,
.lg\\\\:container,
.md\\\\:container{max-width:1024px;margin-left:auto;margin-right:auto;padding-left:4rem;padding-right:4rem;}
}
@media (min-width: 1280px){
.container,
.lg\\\\:container,
.md\\\\:container{max-width:1280px;margin-left:auto;margin-right:auto;padding-left:5rem;padding-right:5rem;}
}
@media (min-width: 1536px){
.container,
.lg\\\\:container,
.md\\\\:container{max-width:1536px;margin-left:auto;margin-right:auto;padding-left:6rem;padding-right:6rem;}
}"
`;

exports[`preset-wind > containers with max width 1`] = `
"/* layer: shortcuts */
.container{width:100%;}
@media (min-width: 640px){
.container{max-width:540px;}
}
@media (min-width: 768px){
.container,
.md\\\\:container{max-width:720px;}
}
@media (min-width: 1024px){
.container,
.lg\\\\:container,
.md\\\\:container{max-width:960px;}
}
@media (min-width: 1280px){
.container,
.lg\\\\:container,
.md\\\\:container{max-width:1140px;}
}"
`;

exports[`preset-wind > custom var prefix 1`] = `
"/* layer: default */
.scale-100{--hi-scale-x:1;--hi-scale-y:1;transform:translateX(var(--hi-translate-x)) translateY(var(--hi-translate-y)) translateZ(var(--hi-translate-z)) rotate(var(--hi-rotate)) rotateX(var(--hi-rotate-x)) rotateY(var(--hi-rotate-y)) rotateZ(var(--hi-rotate-z)) skewX(var(--hi-skew-x)) skewY(var(--hi-skew-y)) scaleX(var(--hi-scale-x)) scaleY(var(--hi-scale-y)) scaleZ(var(--hi-scale-z));}
.text-red{--hi-text-opacity:1;color:rgba(248,113,113,var(--hi-text-opacity));}
.text-opacity-50{--hi-text-opacity:0.5;}"
`;
